--- a/src/assets/scss/_includes.scss
+++ b/src/assets/scss/_includes.scss
@@ -2,5 +2,7 @@
 @import "./helpers/vars";
 @import "base";
 @import "reset";
+@import "buttons";
+@import "form-controls";
 @import "fonts/persian";
 @import "fonts/fontello";
