--- a/src/assets/scss/helpers/_vars.scss
+++ b/src/assets/scss/helpers/_vars.scss
@@ -1,15 +1,14 @@
 $white: #ffffff;
 $pale-grey: #faf8fa;
-$black: #141414;
-$windows-blue: #435fc7;
-$black-two: #000000;
-$boring-green: #65b269;
-$pinkish-red: #ef134f;
-$black-three: #1e1e1e;
-$pastel-orange: #ff974a;
-$white-three: #dcdcdc;
-$white-four: #f4f4f4;
-$royal-purple: #4f005e;
-$greyish-brown: #434343;
-$white-two: #fdfdfd;
+$black: #1e1e1e;
+$blurple: #4b2cb1;
+$iris: #654bbc;
+$faded-green: #7cbd7f;
+$red-pink: #f13669;
+$apricot: #ffa665;
+$white-two: #dcdcdc;
 $pinkish-grey: #d1d1d1;
+$greyish-brown: #4d4d4d;
+$white-three: #fdfdfd;
+$black-two: #000000;
+$pinkish-red: #ef134f;
